--- a/src/Components/Home/Sign up/style/style.scss
+++ b/src/Components/Home/Sign up/style/style.scss
@@ -4,7 +4,7 @@
 	@include Center(center, none); 
 	flex-direction: column;
 	width: 400px;
-	height: 530px;
+	height: 630px;
 	background: #FFF;
 	position: relative;
 	color: #000;
@@ -33,6 +33,10 @@
 			cursor: pointer;
 			font-size: 1.1rem;
 			height: 40px;
+			&.sign-up-btn.unverfied{
+				background: #353535;
+				cursor: not-allowed;
+			}
 			&:nth-child(1){
 				background: transparent;
 				color: #000;
@@ -62,6 +66,9 @@
 		color: #000;
 		padding: 0 5px;
 		margin-top: 20px;
+		&:nth-child(5){
+			margin-bottom: 15px;
+		}
 		&.dark{
 			color: #FFF
 		}
