--- a/src/Components/style/navbar__style.css
+++ b/src/Components/style/navbar__style.css
@@ -145,6 +145,69 @@ nav .dropped__menu.dark {
   border: 1px solid #ff00b8;
 }
 
+nav .dropped__menu .menu__profile {
+  height: 50px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0 10px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
+nav .dropped__menu .menu__profile:hover {
+  background: #373737;
+  border-radius: 7px;
+}
+
+nav .dropped__menu .menu__profile:hover .menu__username {
+  color: #FFF;
+}
+
+nav .dropped__menu .menu__profile .profile-wrapper {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+nav .dropped__menu .menu__profile .profile-wrapper img {
+  width: auto;
+  height: 100%;
+}
+
+nav .dropped__menu .menu__profile .menu__username {
+  color: #000;
+  -webkit-transform: translateX(20px);
+          transform: translateX(20px);
+}
+
+nav .dropped__menu .menu__profile .menu__username.dark {
+  color: #FFF;
+}
+
+nav .dropped__menu .menu__logout {
+  background: #ff4a4a;
+  border-radius: 7px;
+  color: #FFF;
+  border: none;
+  cursor: pointer;
+  font-size: 1.1rem;
+  height: 50px;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+  width: 100%;
+}
+
+nav .dropped__menu .menu__logout:hover {
+  background: #ff5b5b;
+}
+
 nav .dropped__menu .menu__button {
   width: 100%;
   font-size: 1.1rem;
