--- a/src/Components/style/navbar__style.scss
+++ b/src/Components/style/navbar__style.scss
@@ -104,6 +104,54 @@ nav {
       background: #1a1a1a;
 			border: 1px solid #ff00b8;
 		}
+    .menu__profile{
+      height: 50px;
+      width: 100%;
+      display: flex;
+      padding: 0 10px;
+      align-items: center;
+      cursor: pointer;
+      transition: 0.2s;
+      &:hover{
+        background: #373737;
+        border-radius: 7px;
+        & .menu__username{
+          color: #FFF;
+        }
+      }
+      .profile-wrapper{
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        overflow: hidden;
+        img{
+          width: auto;
+          height: 100%;
+        }
+      }
+      .menu__username{
+        color: #000;
+        transform: translateX(20px);
+        &.dark{
+          color: #FFF;
+        }
+      }
+    }
+    .menu__logout{
+      background: #ff4a4a;
+      border-radius: 7px;
+      color: #FFF;
+      border: none;
+      cursor: pointer;
+      font-size: 1.1rem;
+      height: 50px;
+      transition: 0.2s;
+      width: 100%;
+      &:hover{
+      background: #ff5b5b;
+
+      }
+    }
     .menu__button {
       width: 100%;
       font-size: 1.1rem;
