--- a/src/Components/Home/Room Setup/style/private_style.css
+++ b/src/Components/Home/Room Setup/style/private_style.css
@@ -162,4 +162,56 @@ button:focus {
   border: none;
   height: 1px;
 }
+
+.private_create__modal .join-room-btns {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  height: 60px;
+}
+
+.private_create__modal .join-room-btns .result-btns {
+  margin: 0 10px;
+  width: 200px;
+  height: 40px;
+  border-radius: 50px;
+  border: none;
+  -webkit-transition: 0.2s ease;
+  transition: 0.2s ease;
+  cursor: pointer;
+  color: #FFF;
+}
+
+.private_create__modal .join-room-btns .result-btns:nth-child(1) {
+  background: transparent;
+  border: 2px solid #000;
+  color: #000;
+}
+
+.private_create__modal .join-room-btns .result-btns:nth-child(1):hover {
+  background: #000;
+  color: #fff;
+}
+
+.private_create__modal .join-room-btns .result-btns:nth-child(1).dark {
+  border: 2px solid #FFF;
+  color: #FFF;
+}
+
+.private_create__modal .join-room-btns .result-btns:nth-child(1).dark:hover {
+  background: #FFF;
+  color: #000;
+}
+
+.private_create__modal .join-room-btns .result-btns:nth-child(2) {
+  background: -webkit-gradient(linear, left top, right top, from(#FA00FF), to(#161955));
+  background: linear-gradient(to right, #FA00FF, #161955);
+}
 /*# sourceMappingURL=private_style.css.map */
