--- a/src/Components/style/navbar__style.css
+++ b/src/Components/style/navbar__style.css
@@ -284,4 +284,21 @@ nav .dropped__menu .dark-theme__toggler-btn .theme-dragger.true {
   -webkit-transform: translate(40px, -3px);
           transform: translate(40px, -3px);
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #A9A9A9;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+          box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+}
+
+::-webkit-scrollbar-track {
+  background-color: #151515;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.4);
+          box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.4);
+}
 /*# sourceMappingURL=navbar__style.css.map */
