--- a/src/Components/Home/Room Setup/style/style.css
+++ b/src/Components/Home/Room Setup/style/style.css
@@ -37,7 +37,7 @@ button:focus {
           flex-direction: column;
   max-width: 400px;
   min-height: 300px;
-  background: #FFF;
+  background: #fff;
   border-radius: 15px;
   -webkit-box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
           box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
@@ -59,6 +59,145 @@ button:focus {
   border: none;
   cursor: pointer;
   font-size: 1.4em;
+  color: #fff;
+}
+
+.loaderr {
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  display: inline-block;
+  border-top: 3px solid #fff;
+  border-right: 3px solid transparent;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-animation: rotation 1s linear infinite;
+          animation: rotation 1s linear infinite;
+}
+
+@-webkit-keyframes rotation {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes rotation {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+.join__in-private {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: none;
+      -ms-flex-pack: none;
+          justify-content: none;
+  padding: 0 20px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
+  min-height: inherit;
+}
+
+.join__in-private .join-room_wrapper {
+  width: 100%;
+  text-align: center;
+  position: relative;
+}
+
+.join__in-private .join-room_wrapper .goback {
+  position: absolute;
+  left: 0;
+  font-size: 0.7em;
+  top: 0;
+  cursor: pointer;
+  -webkit-transform: translateY(8px);
+          transform: translateY(8px);
+}
+
+.join__in-private .join-room_wrapper .goback:hover {
+  text-decoration: underline;
+}
+
+.join__in-private .join-room_wrapper .goback.dark {
+  color: #fff;
+}
+
+.join__in-private .join__input {
+  width: 100%;
+  height: 40px;
+  text-align: center;
+  border-radius: 8px;
+  outline: none;
+  border: 2px solid #FA00FF;
+  background: transparent;
+  color: #000;
+  padding: 0 5px;
+  margin-top: 20px;
+}
+
+.join__in-private .join__input.dark {
+  color: #fff;
+}
+
+.join__in-private .join_in_room {
+  margin-top: 50px;
+}
+
+.join__in-private .join_in_room.dark {
   color: #FFF;
+}
+
+.join__in-private .join_room_btn {
+  width: 200px;
+  height: 80px;
+  border-radius: 50px;
+  background: -webkit-gradient(linear, left top, right top, from(#FA00FF), to(#161955));
+  background: linear-gradient(to right, #FA00FF, #161955);
+  margin: 10px 0;
+  border: none;
+  cursor: pointer;
+  font-size: 1.4em;
+  color: #fff;
+  height: 50px;
+  width: 150px;
+  font-size: 1.1rem;
+}
+
+.join_error {
+  width: 100%;
+  min-height: 50px;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: #FFF;
+  background: #ff4f4f;
+  font-size: 0.9em;
+  border-radius: 5px;
 }
 /*# sourceMappingURL=style.css.map */
