--- a/src/Components/Room/Message/Message Types/style/style.css
+++ b/src/Components/Room/Message/Message Types/style/style.css
@@ -20,12 +20,18 @@ button:focus {
   width: 100%;
   min-height: 80px;
   border-radius: 8px;
+  margin-bottom: 10px;
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
 .just-message:hover {
+  background: #e2e2e2;
+}
+
+.just-message.dark:hover {
   background: #252525;
 }
 
@@ -43,6 +49,7 @@ button:focus {
   min-height: 80px;
   width: 80px;
   padding-top: 10px;
+  cursor: pointer;
 }
 
 .just-message .profile-picture .profile-picture__wrapper {
@@ -50,6 +57,11 @@ button:focus {
   height: 60px;
   border-radius: 50%;
   overflow: hidden;
+}
+
+.just-message .profile-picture .profile-picture__wrapper:hover {
+  -webkit-box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+          box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 
 .just-message .profile-picture .profile-picture__wrapper img {
@@ -65,6 +77,7 @@ button:focus {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  position: relative;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -86,14 +99,92 @@ button:focus {
           justify-content: none;
 }
 
+.just-message .main-content .time_username-wrapper time {
+  font-size: .8em;
+  margin-left: 10px;
+  color: #474747;
+  -webkit-transform: translateY(1px);
+          transform: translateY(1px);
+}
+
 .just-message .main-content .actual__messsage {
   width: 100%;
   height: 100%;
   min-height: 45px;
   color: #000;
+  overflow-wrap: anywhere;
 }
 
 .just-message .main-content .actual__messsage.dark {
   color: #FFF;
+}
+
+.message_option {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 200px;
+  background: #FFF;
+  z-index: 8;
+  min-height: 100px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  border-radius: 6px;
+  top: 0;
+  left: 0;
+  position: absolute;
+}
+
+.message_option.dark {
+  background: #3f3f3f;
+}
+
+.message_option .options-config-btn {
+  width: 100%;
+  background: transparent;
+  border: none;
+  height: 30px;
+  color: #000;
+  outline: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  border-radius: 3px;
+  background: #e2e2e2;
+  cursor: pointer;
+}
+
+.message_option .options-config-btn.delete-btn {
+  background: #e2e2e2;
+  color: #000;
+}
+
+.message_option .options-config-btn.delete-btn.dark:hover {
+  background: #ff5c5c;
+}
+
+.message_option .options-config-btn.delete-btn:hover {
+  color: #FFF;
+  background: #ff5c5c;
+}
+
+.message_option .options-config-btn:hover {
+  background: #919191;
+}
+
+.message_option .options-config-btn.dark {
+  color: #FFF;
+  background: transparent;
+}
+
+.message_option .options-config-btn.dark:hover {
+  background: #252525;
 }
 /*# sourceMappingURL=style.css.map */
