--- a/src/Components/Room/Message/style/messages.css
+++ b/src/Components/Room/Message/style/messages.css
@@ -34,6 +34,7 @@ button:focus {
   width: 100%;
   -ms-flex-item-align: end;
       align-self: flex-end;
+  margin-bottom: 10px;
   height: 50px;
 }
 
@@ -46,10 +47,11 @@ button:focus {
   border-radius: 5px;
   font-size: 1.002rem;
   padding: 0 5px;
+  font-family: "Poppins", sans-serif;
 }
 
 .client__input-form .client__input.dark {
-  color: #FFF;
+  color: #fff;
 }
 
 .sent_messages__container {
@@ -68,6 +70,7 @@ button:focus {
   right: 0;
   top: 70px;
   width: 100%;
+  z-index: 6;
   position: fixed;
   border-radius: 0 0 8px 8px;
   -webkit-box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 8px 0px 16px -8px;
@@ -108,11 +111,70 @@ button:focus {
 }
 
 .room-header .room__info .room-name.dark {
-  color: #FFF;
+  color: #fff;
 }
 
 .room-header .active__users-side {
   max-width: 400px;
   width: 100%;
+}
+
+@-webkit-keyframes skeleton-load {
+  0% {
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+  }
+  100% {
+    -webkit-transform: translateX(200px);
+            transform: translateX(200px);
+  }
+}
+
+@keyframes skeleton-load {
+  0% {
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+  }
+  100% {
+    -webkit-transform: translateX(200px);
+            transform: translateX(200px);
+  }
+}
+
+.skeleton {
+  width: 200px;
+  overflow: hidden;
+  background: rgba(255, 255, 255, 0.2);
+  margin-left: 20px;
+  border-radius: 50px;
+  height: 25px;
+  overflow: hidden;
+  position: relative;
+}
+
+.skeleton.room-icon {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-left: 0;
+}
+
+.skeleton:before {
+  content: "";
+  width: 6px;
+  position: absolute;
+  background: #fff;
+  -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -o-filter: blur(5px);
+  -ms-filter: blur(5px);
+  filter: blur(5px);
+  height: 100%;
+  -webkit-animation-name: skeleton-load;
+          animation-name: skeleton-load;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
 }
 /*# sourceMappingURL=messages.css.map */
