--- a/src/Components/Room/RoomUsers/style/dashboard.css
+++ b/src/Components/Room/RoomUsers/style/dashboard.css
@@ -19,9 +19,16 @@ button:focus {
 .current_online_users {
   width: 100%;
   max-width: 400px;
-  border: 1px solid red;
+  min-width: 400px;
+  background: #1b1b1b;
   height: calc(100% - 70px);
   -ms-flex-item-align: end;
       align-self: flex-end;
+}
+
+@media screen and (max-width: 1000px) {
+  .current_online_users {
+    display: none;
+  }
 }
 /*# sourceMappingURL=dashboard.css.map */
