--- a/src/Components/Room/Message/style/messages.css
+++ b/src/Components/Room/Message/style/messages.css
@@ -35,23 +35,72 @@ button:focus {
   -ms-flex-item-align: end;
       align-self: flex-end;
   margin-bottom: 10px;
+  position: relative;
   height: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.client__input-form .replying_to {
+  width: calc(100% - 40px);
+  height: 30px;
+  z-index: 0;
+  left: 20px;
+  border-radius: 9px 9px 0 0;
+  padding: 0 20px;
+  color: #FFF;
+  position: absolute;
+  -webkit-transform: translateY(-30px);
+          transform: translateY(-30px);
+  background: #3b5f64;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: default;
+}
+
+.client__input-form .replying_to p {
+  color: #FFF;
+  margin-left: 5px;
+  font-weight: 500;
+  -webkit-transform: translateY(-1.5px);
+          transform: translateY(-1.5px);
+}
+
+.client__input-form .replying_to .exit-reply {
+  position: absolute;
+  right: 0;
+  -webkit-transform: translateX(-10px);
+          transform: translateX(-10px);
+  cursor: pointer;
 }
 
 .client__input-form .client__input {
   height: 100%;
   width: 100%;
+  z-index: 9;
+  position: absolute;
   background: transparent;
   border: none;
   border: 2px solid #FA00FF;
   border-radius: 5px;
   font-size: 1.002rem;
   padding: 0 5px;
+  background: #FFF;
   font-family: "Poppins", sans-serif;
 }
 
 .client__input-form .client__input.dark {
   color: #fff;
+  background: #1a1a1a;
 }
 
 .sent_messages__container {
