Added: Change Room name and icon

--- a/src/Components/Room/Message/Message Types/style/style.css
+++ b/src/Components/Room/Message/Message Types/style/style.css
@@ -142,11 +142,13 @@ button:focus {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  margin-bottom: 10px;
   border-radius: 8px;
 }
 
 .replied-message-wrapper.ping {
-  background: rgba(255, 255, 0, 0.1);
+  background: #ff00b31a;
+  border-left: 2px solid #ff00b3;
 }
 
 .replied-message-wrapper:hover {
