--- a/src/Components/Room/Room Settings/Members/style/style.scss
+++ b/src/Components/Room/Room Settings/Members/style/style.scss
@@ -120,6 +120,7 @@
       @include Center(center, none);
       min-width: 200px;
       height: 60px;
+      cursor: default;
       .pfp-frame {
         width: 50px;
         height: 50px;
