--- a/src/Components/Room/RoomUsers/style/dashboard.css
+++ b/src/Components/Room/RoomUsers/style/dashboard.css
@@ -20,15 +20,68 @@ button:focus {
   width: 100%;
   max-width: 400px;
   min-width: 400px;
-  background: #1b1b1b;
+  background: transparent;
   height: calc(100% - 70px);
+  overflow-y: auto;
   -ms-flex-item-align: end;
       align-self: flex-end;
+  padding: 70px 10px 0 10px;
 }
 
 @media screen and (max-width: 1000px) {
   .current_online_users {
     display: none;
   }
+}
+
+.current_online_users .online-member {
+  width: 100%;
+  height: 70px;
+  background: transparent;
+  border-radius: 6px;
+  margin-bottom: 10px;
+  color: #000;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 10px;
+}
+
+.current_online_users .online-member:hover {
+  background: #e6e6e6;
+}
+
+.current_online_users .online-member.dark {
+  color: #FFF;
+}
+
+.current_online_users .online-member.dark:hover {
+  background: #222222;
+}
+
+.current_online_users .online-member .pfp__frame {
+  width: 50px;
+  height: 50px;
+  overflow: hidden;
+  border-radius: 50%;
+}
+
+.current_online_users .online-member .pfp__frame img {
+  width: auto;
+  height: 100%;
+}
+
+.current_online_users .online-member .active-users__username {
+  font-weight: 500;
+  margin-left: 10px;
+  color: #000;
+  cursor: default;
+}
+
+.current_online_users .online-member .active-users__username.dark {
+  color: #FFF;
 }
 /*# sourceMappingURL=dashboard.css.map */
