--- a/src/Components/Room/RoomUsers/style/dashboard.scss
+++ b/src/Components/Room/RoomUsers/style/dashboard.scss
@@ -4,10 +4,51 @@
 	width: 100%;
 	max-width: 400px;
 	min-width: 400px;
-	background: #1b1b1b;
+	background: transparent;
 	height: calc(100% - 70px);
+	overflow-y: auto;
 	align-self: flex-end;
+	padding: 70px 10px 0 10px;
 	@media screen and(max-width: 1000px){
 		display: none;
 	}
-}
+	.online-member{
+		width: 100%;
+		height: 70px;
+		background: transparent;
+		border-radius: 6px;
+		margin-bottom: 10px;
+		color: #000;
+		display: flex;
+		align-items: center;
+		padding: 0 10px;
+		&:hover{
+			background: #e6e6e6;
+		}
+		&.dark{
+			color: #FFF;
+			&:hover{
+				background: #222222;
+			}
+		}
+		.pfp__frame{
+			width: 50px;
+			height: 50px;
+			overflow: hidden;
+			border-radius: 50%;
+			img{
+				width: auto;
+				height: 100%;
+			}
+		}
+		.active-users__username{
+			font-weight: 500;
+			margin-left: 10px;
+			color: #000;
+			cursor: default;
+			&.dark{
+				color: #FFF;
+			}
+		}
+	}
+}  
