--- a/src/Components/Room/Message/style/messages.scss
+++ b/src/Components/Room/Message/style/messages.scss
@@ -16,6 +16,38 @@
   height: 50px;
   display: flex;
   flex-direction: column;
+  .emojis-menu-opener{
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    cursor: pointer;
+    right: 0;
+    transform: translateY(3px);
+    z-index: 18;
+    padding: 5px;
+    &::before{
+      content: "";
+      position: absolute;
+      left: 0;
+      height: 30px;
+      width: 1px;
+      background: #9c9c9c;
+    }
+    img{
+      width: 100%;
+      filter: grayscale(100%);
+    }
+    .emoji-menu{
+      position: absolute;
+      min-width: 200px;
+      min-height: 200px;
+      bottom: 50%;
+      right:50%;
+      & *{
+        box-shadow: none;
+      }
+    }
+  }
   .replying_to{
     width: calc(100% - 40px);
     height: 30px;
@@ -53,7 +85,8 @@
     border: 2px solid $gradient__color-one;
     border-radius: 5px;
     font-size: 1.002rem;
-    padding: 0 5px;
+    padding-left: 5px;
+    padding-right: 45px;
     background: #FFF;
     font-family: "Poppins", sans-serif;
     &.dark {
@@ -158,5 +191,19 @@
     animation-name: skeleton-load;
     animation-duration: 1s;
     animation-iteration-count: infinite;
+  }
+}
+
+.twemoji{
+  width: 20px;
+  transform: translateY(6px);
+  margin-left: 5px;
+  &.big{
+    width: 40px;
+    transform: translateY(0px);
+  }
+  &.mini{
+    transform: translateY(4px);
+    width: 15px;
   }
 }
