--- a/src/Components/Room/Message/Message Types/style/style.scss
+++ b/src/Components/Room/Message/Message Types/style/style.scss
@@ -47,6 +47,9 @@
 		position: relative;
 		flex-direction: column;
 		.time_username-wrapper{
+			&:hover{
+				cursor: default;
+			}
 			width: 100%;
 			height: 35px;
 			color: rgb(131, 131, 131);
