--- a/src/Components/Room/Room Settings/Members/style/style.css
+++ b/src/Components/Room/Room Settings/Members/style/style.css
@@ -95,18 +95,23 @@ button:focus {
           flex-direction: column;
   top: 0;
   background: #fff;
-  width: 160px;
-  height: 80px;
+  width: 180px;
+  height: 100px;
   border-radius: 10px 0 10px 10px;
+  overflow: hidden;
   -webkit-transform: translate(-35px, 35px);
           transform: translate(-35px, 35px);
   -webkit-box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
           box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
-  z-index: 99;
+  z-index: 18;
 }
 
 .settings__members-list .settings__member-list .settings__member-options.dark {
   background: #2c2c2c;
+}
+
+.settings__members-list .settings__member-list .settings__member-options.dark .high-order-permission__btn:nth-child(3) {
+  color: #fff;
 }
 
 .settings__members-list .settings__member-list .settings__member-options .high-order-permission__btn {
@@ -138,6 +143,14 @@ button:focus {
 .settings__members-list .settings__member-list .settings__member-options .high-order-permission__btn:nth-child(2):hover {
   color: #fff;
   background: #ff4848;
+}
+
+.settings__members-list .settings__member-list .settings__member-options .high-order-permission__btn:nth-child(3) {
+  color: #000;
+}
+
+.settings__members-list .settings__member-list .settings__member-options .high-order-permission__btn:nth-child(3):hover {
+  background: rgba(14, 30, 37, 0.32);
 }
 
 .settings__members-list .settings__member-list .member-list-options-opener {
