--- a/src/Components/Room/Room Settings/Members/style/style.scss
+++ b/src/Components/Room/Room Settings/Members/style/style.scss
@@ -53,15 +53,19 @@
       flex-direction: column;
       top: 0;
       background: #fff;
-      width: 160px;
-      height: 80px;
+      width: 180px;
+      height: 100px;
       border-radius: 10px 0 10px 10px;
+      overflow: hidden;
       transform: translate(-35px, 35px);
 			box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
-      z-index: 99;
+      z-index: 18;
 			&.dark{
 				background: #2c2c2c;
-			}
+        .high-order-permission__btn:nth-child(3){
+          color: #fff;
+        }
+      }
       .high-order-permission__btn {
         width: 100%;
         cursor: pointer;
@@ -84,6 +88,12 @@
           &:hover {
             color: #fff;
             background: #ff4848;
+          }
+        }
+        &:nth-child(3){
+          color: #000;
+          &:hover{
+            background: rgba(14, 30, 37, 0.32);
           }
         }
       }
